--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ ext {
 }
 
 dependencies {
-	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
 	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
 	developmentOnly "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
