--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,11 @@
 server:
-  port: 8081
+  port: 8083
 
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/powerup
-    username: root
-    password: 1234
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/traceability
+      database: traceability
 
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-appDescription: "Pragma Powerup"
+appDescription: "traceability"
 appVersion: "1.0.0"
